tests/invalid/definite/ListLength_Invalid_1.whiley
void System::main([string] args):
    [int] arr
    arr = [1,2,3]
    assert |arr| == 4 
    print str(arr[0])
